# action-package-debian-ros

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-ros  README.md  action.yml  app  entrypoint.sh  package-amros.sh  package-ros.sh  package.sh  package.xml  release-build.sh  story-build.sh
.github/actions/test@local/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: test.yml
debian/: changelog  control  rules
debian/debian-package-test-action/DEBIAN/: control  md5sums
docker/amros/: Dockerfile
docker/ros/: Dockerfile
